--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
   </footer>
 
   <!-- Scripts -->
-     
+     <script src="config.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="components/spinner.js"></script>
 <script>
     // Set the API base URL from the config file
     const API_BASE = window.BASE_URL;
